--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</div>
 <div class="inputan">
 	<form name="teks">
-		<button id="connectBtn">connect metamask</button>
+		<button type="button" id="connectBtn">connect metamask</button>
 		<p id="status">wallet belum terkoneksi</p>
 		<input type="text" name="tulisan" size="20">
 
@@ -28,4 +28,5 @@
 </body>
 
 <script type="text/javascript" src="script.js"></script>
+
 </html>
