--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
 
 	</form>
 </div>
+
+	<!--
 <div class="flower">
 	<!-- <div id="animasi"></div>
 
-	<img id="satu" src="bijiFlower.png"> -->
-	</div>
+	<img id="satu" src="bijiFlower.png"> 
+	</div> -->
 </body>
 
 <script type="text/javascript" src="script.js"></script>
 
 </html>
+
