--- a/lihat.html
+++ b/lihat.html
@@ -6,7 +6,9 @@
 <body>
 <h2>Lihat disini</h2>
 <div id="hasil">.....</div>
+	<button id="loadBtn">Connect & Load</button>
+
+</body>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.main.js"></script>
 <script type="text/javascript" src="tampilkan.js"></script>
-</body>
 </html>
