--- a/lihat.html
+++ b/lihat.html
@@ -5,11 +5,12 @@
 </head>
 <body>
 <h2>Lihat disini</h2>
-<div id="hasil">.....</div>
+<div id="hasil">＼⁠(⁠^⁠o⁠^⁠)⁠／</div>
 <button type="button" id="loadBtn">Connect & Load</button>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.main.js"></script>
 <script type="text/javascript" src="tampilkan.js"></script>
 </html>
+
 
