--- a/lihat.html
+++ b/lihat.html
@@ -9,11 +9,12 @@
 <button type="button" id="loadBtn">Connect & Load</button>
 
 
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 <script type="text/javascript" src="tampilkan.js"></script>
 </body>
 
 </html>
+
 
 
 
